[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "LeetCode code"
homepage = "https://github.com/SaitoTsutomu/leetcode"
license = "PSFL"
name = "leetcode"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
leetcode = "leetcode:main"

[tool.poetry.dependencies]
fire = "^0"
python = "^3.12"
scipy = "^1.14"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
rope = "^1.13"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
